DTO Entity 매핑 안되게 변경, OneToOne FK 이름 설정 완료, html 추가 및 변경, 로그인 로직 예외처리 Entity 추가

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.json:json:20210307'
-    implementation 'io.hypersistence:hypersistence-utils-hibernate-60:${hypersistence-utils.version}'
+    implementation 'io.hypersistence:hypersistence-utils-hibernate-60:3.7.3'
 }
 
 tasks.named('test') {
