--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ server:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-#    url: jdbc:h2:
+    url : jdbc:h2:mem:testdb
     username: sa
     password: 1234
 
