--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,22 +11,30 @@ server:
 
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url : jdbc:h2:mem:testdb
-    username: sa
-    password: 1234
+    drivar-class-name: org.maridb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/db24102?characterEncoding=UTF-8&serverTimezone=UTC
+    username : root
+    password : rlaalstj1!
+
 
   jpa:
     hibernate:
       ddl-auto: update #?? ?? DB
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    show-sql: false #???? ? ??? ????
+    show-sql: true #???? ? ??? ????
     properties:
       hibernate:
-        format_sql: false #??? ????.
+        format_sql: true #??? ????.
     defer-datasource-initialization: true # ?????? ?? data.sql ??!!
+
+  main:
+    allow-bean-definition-overriding: true
+
   sql:
     init:
       mode: always #?? ?? ???? ???? ?? ???? ????.
 
+  logging :
+    level :
+      com.f2z.gach : debug
