우선 뷰를 다 만들었음. CSS는 수정해야할 것이 많음

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,9 @@ spring:
     init:
       mode: always #?? ?? ???? ???? ?? ???? ????.
 
-  logging :
-    level :
-      com.f2z.gach : debug
+logging :
+  level :
+    com.f2z.gach : debug
+
+gach:
+  img.dir: /Users/nomyeongjun/Documents/GachProject-before/src/main/resources/static/image
