--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
     url: jdbc:mariadb://localhost:3306/db24102?characterEncoding=UTF-8&serverTimezone=UTC
     username : dbid241
     password : dbpass241
+#    username : root
+#    password : rlaalstj1!
 
 
   jpa:
@@ -44,4 +46,7 @@ logging :
     #root : trace
 
 gach:
-  img.dir: #설정바람
+#  img.dir: /Users/hurray/Desktop/2023년도 자료/학교 수업/2024 프로젝트/gach/src/main/resources/static/image
+#  path: /localhost:6002
+  img.dir: /home/t24102/GachProject/src/main/resources/static/image
+  path: /ceprj.gachon.ac.kr:60002
