--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,4 +49,4 @@ gach:
 #  img.dir: /Users/hurray/Desktop/2023년도 자료/학교 수업/2024 프로젝트/gach/src/main/resources/static/image
 #  path: /localhost:6002
   img.dir: /home/t24102/GachProject/src/main/resources/static/image
-  path: /ceprj.gachon.ac.kr:60002
+  path: http://ceprj.gachon.ac.kr:60002
