--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,6 +47,6 @@ logging :
 
 gach:
 #  img.dir: /Users/hurray/Desktop/2023년도 자료/학교 수업/2024 프로젝트/gach/src/main/resources/static/image
-#  path: /localhost:6002
+#  path: http://localhost:60002
   img.dir: /home/t24102/GachProject/src/main/resources/static/image
   path: http://ceprj.gachon.ac.kr:60002
