로그파일 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,6 +43,8 @@ spring:
       mode: always #?? ?? ???? ???? ?? ???? ????.
 
 logging :
+  file:
+    name: gachApplication.log
   level :
     com.f2z.gach : debug
     #root : trace
