place 수정, apllication.yml 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,11 @@ spring:
 #    password : rlaalstj1!
 #    username : root
 #    password : mj3269
-
+  thymeleaf:
+    cache: false
+  devtools:
+    restart:
+      enabled: true
 
   jpa:
     hibernate:
