--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,13 +13,10 @@ spring:
   datasource:
     drivar-class-name: org.maridb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/db24102?characterEncoding=UTF-8&serverTimezone=UTC
-    username : dbid241
-    password : dbpass241
-#    username : root
-#    password : rlaalstj1!
-#    username : root
-#    password : mj3269
 
+  profiles:
+    active: dev
+#    active: local
   thymeleaf:
     cache: false
   devtools:
@@ -53,16 +50,6 @@ logging :
   level :
     com.f2z.gach : debug
     #root : trace
-#  org.hibernate.SQL: ERROR
-#  org.hibernate.type.descriptor.sql.BasicBinder: ERROR
 
-gach:
-  # kms local
-#  img.dir: /Users/hurray/Desktop/2023년도 자료/학교 수업/2024 프로젝트/gach/src/main/resources/static/image
-# nmj local
-#  img.dir: /Users/nomyeongjun/Documents/2024-1/Project/GachProject/src/main/resources/static/image
-#  path: http://localhost:60002
-# server
-#  img.dir: /home/t24102/GachProject/src/main/resources/static/image
-#  path: http://ceprj.gachon.ac.kr:60002
+
 
