--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,14 +2,14 @@ spring:
   datasource:
     drivar-class-name: org.maridb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/db24102?characterEncoding=UTF-8&serverTimezone=UTC
-    username : root
-    password : rlaalstj1!
 #    username : root
-#    password : mj3269
+#    password : rlaalstj1!
+    username : root
+    password : mj3269
 
 gach:
   path: http://localhost:60002
-  img.dir: /Users/hurray/Desktop/2023년도 자료/학교 수업/2024 프로젝트/gachImage
-#  img.dir: /Users/nomyeongjun/Documents/2024-1/Project/GachProject/src/main/resources/static/image
+#  img.dir: /Users/hurray/Desktop/2023년도 자료/학교 수업/2024 프로젝트/gachImage
+  img.dir: /Users/nomyeongjun/Documents/2024-1/Project/GachProject/src/main/resources/static/image
 
 
