--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,8 +15,8 @@ spring:
     url: jdbc:mariadb://localhost:3306/db24102?characterEncoding=UTF-8&serverTimezone=UTC
 
   profiles:
-#    active: dev
-    active: prod
+    active: dev
+#    active: prod
   thymeleaf:
     cache: false
   devtools:
@@ -49,7 +49,7 @@ logging :
     name: gachApplication.log
   level :
     com.f2z.gach : debug
-    #root : trace
+#    root : debug
 
 
 
